Sentry logging updates